git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1529 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5ajax/README
+++ b/html5ajax/README
@@ -24,6 +24,7 @@
 * [[101feature:Cut]]
 * [[101feature:Persistence]]
 * [[101feature:Interaction]]
+* [[101feature:Precedence]]
 * [[101feature:Validation]]
 
 == Motivation ==
