--- a/moose/README
+++ b/moose/README
@@ -1,7 +1,18 @@
-This package contains an implementation of 101 Companies written using Pharo Smalltalk and making use of the Moose capabilities.
+== Intent ==
 
-How to install
-------
+an implementation in a Pharo Smalltalk with the Moose capabilities.
+
+== Technologies ==
+
+== Languages ==
+
+* [[Language:Smalltalk]]
+
+Specific versions may be defined by any given implementation.
+
+== Description ==
+
+== Usage ==
 
 1. Download and open Moose:
 http://moosetechnology.org/download
