git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1551 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/moose/README
+++ b/moose/README
@@ -4,11 +4,11 @@ an implementation in a Pharo Smalltalk with the Moose capabilities.
 
 == Technologies ==
 
+* [[Technology:Pharo]]
+
 == Languages ==
 
 * [[Language:Smalltalk]]
-
-Specific versions may be defined by any given implementation.
 
 == Description ==
 
