git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1557 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5ajax/README
+++ b/html5ajax/README
@@ -53,7 +53,7 @@ This message tells the server to [[101feature:Cut|cut]] the company with the ide
 }
 </syntaxhighlight>
 
-A [[server-side]] method performs that [[101feature:Cut|cut]]-request:
+The [[server]] receives the [[101feature:Cut|cut]]-request and performs the action:
 
 <syntaxhighlight lang="php">
 // ---------------------------------------- cut company
