git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1558 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5ajax/README
+++ b/html5ajax/README
@@ -68,6 +68,7 @@ function cut($jsonObject) {
 
 == Architecture ==
 
+This application is implemented with [[Architecture:MVC|MVC]]. The client is devided into the [[101feature:Interaction|view]] ([this!!/client/company.html company.html], [this!!/client/javascript/view/companyView.js companyView.js]), the controller ([this!!/client/javascript/controller.js controller.js]) and the model ([this!!/client/javascript/model/companyModel.js companyModel.js]).
 
 == Usage ==
 
