--- a/html5ajax/README
+++ b/html5ajax/README
@@ -68,7 +68,9 @@ function cut($jsonObject) {
 
 == Architecture ==
 
-This application is implemented with [[Architecture:MVC|MVC]]. The client is devided into the [[101feature:Interaction|view]] ([this!!/client/company.html company.html], [this!!/client/javascript/view/companyView.js companyView.js]), the controller ([this!!/client/javascript/controller.js controller.js]) and the model ([this!!/client/javascript/model/companyModel.js companyModel.js]).
+* This application is implemented with [[Architecture:MVC|MVC]]. The client is devided into the [[101feature:Interaction|view]] (example for company: [this!!/client/company.html company.html], [this!!/client/javascript/view/companyView.js companyView.js]), the controller ([this!!/client/javascript/controller.js controller.js]) and the model (example for company: [this!!/client/javascript/model/companyModel.js companyModel.js]).
+
+* The [[Technology:XMLHttpRequest|requests]] are encoded with [[Technology:JSON]]. Visit http://en.wikipedia.org/wiki/JSON to get more information.
 
 == Usage ==
 
