--- a/html5ajax/README
+++ b/html5ajax/README
@@ -74,6 +74,8 @@ function cut($jsonObject) {
 
 * There is a single [[server-side]] [[Language:php]]-script for each page (e.g. [this!!/server/companyServer.php companyServer.php]). Each script receives the [[Technology:JSON]]-message and performs the delivered action. Each action is implemented as a seperate function. The implementation is [[OO_programming_paradigm|object-oriented]], which guarantees a consistent form for the responses (e.g. [this!!/server/classes/company.php company.php]).
 
+* The [[client-side]] [[101feature:Validation]] is performed directly. If an exception occurs on the server, the response contains an error-flag and a list of field-identifiers and dedicated messages. This messages are delegated to the concerning fields in the GUI.
+
 == Usage ==
 
 You need a web- and sql-server to use this application. In this tutorial both will be taken by XAMPP: http://www.apachefriends.org/en/xampp.html
