--- a/html5ajax/README
+++ b/html5ajax/README
@@ -72,7 +72,9 @@ function cut($jsonObject) {
 
 * The [[Technology:XMLHttpRequest|requests]] are encoded with [[Technology:JSON]]. Visit http://en.wikipedia.org/wiki/JSON to get more information. The structure of the messages is described in the [[101implementation:html5ajax#Illustration|illustration]]-section.
 
-* There is a single [[server-side]] [[Language:php]]-script for each page (e.g. [this!!/server/companyServer.php companyServer.php]). Each script receives the [[Technology:JSON]]-message and performs the delivered action. Each action is implemented as a seperate function. The implementation is [[OO_programming_paradigm|object-oriented]], which guarantees a consistent form for the responses (e.g. [this!!/server/classes/company.php company.php]).
+* There is a single [[server-side]] [[Language:php]]-script for each page (e.g. [this!!/server/companyServer.php companyServer.php]). Each script receives the [[Technology:JSON]]-message and performs the delivered action. Each action is implemented as a seperate function. The implementation of the responses is [[OO_programming_paradigm|object-oriented]], which guarantees a consistent form for the messages (e.g. [this!!/server/classes/company.php company.php]).
+
+* The concrete data is stored in an [[Language:sql]]-database (comparing [[101implementation:MySql]]).
 
 * The [[client-side]] [[101feature:Validation]] is performed directly. If an exception occurs on the server, the response contains an error-flag and a list of field-identifiers and dedicated messages. This messages are delegated to the concerning fields in the GUI.
 
