git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1567 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/html5ajax/README
+++ b/html5ajax/README
@@ -1,6 +1,6 @@
 == Intent ==
 
-[[web programming]] with [[Language:HTML5]]
+[[web programming]] with [[Language:HTML5]], [[Language:JavaScript]], [[Language:php]] and [[Language:SQL]]
 
 == Languages ==
 
