git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1571 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/javaTree/README
+++ b/javaTree/README
@@ -36,4 +36,4 @@ Tree based implementation in [[Language:Java]].
 * {{101contributor|Hanna-Marike Reger|developer}}
 * {{101contributor|Helena Swerdlow|developer}}
 * {{101contributor|Jan Ruether|developer}}
-* {{101contributor|Tobias Zimmer|reviewer}}
+* {{101contributor|Tobias Zimmer|developer}}
