--- a/javaTree/README
+++ b/javaTree/README
@@ -21,6 +21,8 @@ Tree based implementation in [[Language:Java]].
 
 ''This project was created at the PTT-Hackathon 2011.''
 
+The tree-based view allows the user to get a large overview of the hierarchy of the [[101companies:System]]. The tree allows easy [[101feature:Interaction#Navigation|navigation]] within this hierarchy. The tree also provides quick adjustment on changes of the [[101feature:Company|company]] data.
+
 == Illustration ==
 
 
