git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1575 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/javaTree/README
+++ b/javaTree/README
@@ -16,6 +16,7 @@ Tree based implementation in [[Language:Java]].
 * [[101feature:Company]]
 * [[101feature:Total]]
 * [[101feature:Cut]]
+* [[101feature:Interaction]]
 
 == Motivation ==
 
@@ -31,6 +32,8 @@ The tree-based view allows the user to get a large overview of the hierarchy of 
 
 == Usage ==
 
+* This project is provided as an [[Technology:Eclipse]] project.
+* After importing the project into [[Technology:Eclipse]] as ''Java Project'', just run Interaction.java as ''Java Application''.
 
 == Contributors ==
 
