git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1587 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/qt/README
+++ b/qt/README
@@ -34,7 +34,7 @@
 == Contributors ==
 
 * {{101contributor|Alexander Anthes|developer}}
-* {{101contributor|Ina Schröder|developer}}
+* {{101contributor|Ina Schroeder|developer}}
 * {{101contributor|Katharina Naujokat|developer}}
 * {{101contributor|Martina Sekulla|developer}}
 * {{101contributor|Tobias Zimmer|developer}}
