git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1611 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/seam/README
+++ b/seam/README
@@ -2,12 +2,15 @@
 
 illustrate building a web applications with Seam
 
-
 == Languages ==
 
 * [[Language:Java]]
 * [[Language:HQL]]
 * [[Language:XHTML]]
+
+== Technologies ==
+
+* [[Technology:Seam]]
 
 == Features ==
 
@@ -54,4 +57,3 @@ the SEAM framework.
 == Contributors ==
 
 * {{101contributor|Rodrigo Bonifacio|developer}}
-
