fixed some layout issues in the README of the project clojureRefs
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1629 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/clojureRefs/README
+++ b/clojureRefs/README
@@ -33,16 +33,14 @@ so that [[Refs]] and [[transactions]] are used.
 
 Changes to [[Refs]] by a transformation like [[101feature:Cut|Cut]] have to be
 encapsulated into a [[transaction]]. In [[Language:Clojure|Clojure]] the 
-function <syntaxhighlight lang="text">dosync</syntaxhighlight> starts such a
-transaction allowing to alter [[Refs]] by an update function. 
+function ''dosync'' starts such a transaction allowing to alter [[Refs]] by 
+an update function. 
 
 <syntaxhighlight lang="text">
 (defn cutCompany [c]
     (dosync
-        (alter 
-            c ;; ref
-            #(update-in % [:depts] (partial map cutDept)) ;; update function
-    ))
+        ;; alter ref function
+        (alter c #(update-in % [:depts] (partial map cutDept))))
     ;; returning changed ref
     c)
 </syntaxhighlight>
