fixed some layout issues in the README of the project groovyDataFlowVariables
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1633 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/groovyDataFlowVariables/README
+++ b/groovyDataFlowVariables/README
@@ -45,7 +45,7 @@ by the system. For compact programing [[Technology:GPars|GPars]] offers a
 These variables are initialized [[Lazy Evaluation|lazily]] the first time they are accessed. 
 An example for such a [[bean]] is ''totals''.
 
-<syntaxhighlight lang="text">
+<nowiki>
 // outsourcing total computation for each the department
 for (i in 0..<depts.size) {
     Department d = depts.get i
@@ -54,7 +54,7 @@ for (i in 0..<depts.size) {
         totals.putAt d.name, d.total()
     }
 }
-</syntaxhighlight>
+</nowiki>
 
 == Architecture ==
 
