--- a/clojureRefs/README
+++ b/clojureRefs/README
@@ -36,14 +36,14 @@ encapsulated into a [[transaction]]. In [[Language:Clojure|Clojure]] the
 function ''dosync'' starts such a transaction allowing to alter [[Refs]] by 
 an update function. 
 
-<syntaxhighlight lang="text">
+<nowiki>
 (defn cutCompany [c]
     (dosync
         ;; alter ref function
         (alter c #(update-in % [:depts] (partial map cutDept))))
     ;; returning changed ref
     c)
-</syntaxhighlight>
+</nowiki>
 
 == Architecture ==
 
