fixed some layout issues in the README of the project clojureRefs
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1635 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/clojureRefs/README
+++ b/clojureRefs/README
@@ -36,14 +36,14 @@ encapsulated into a [[transaction]]. In [[Language:Clojure|Clojure]] the
 function ''dosync'' starts such a transaction allowing to alter [[Refs]] by 
 an update function. 
 
-<nowiki>
+<code>
 (defn cutCompany [c]
     (dosync
         ;; alter ref function
         (alter c #(update-in % [:depts] (partial map cutDept))))
     ;; returning changed ref
     c)
-</nowiki>
+</code>
 
 == Architecture ==
 
