fixed some layout issues in the README of clojureRefs and groovyDataFlowVariables
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1639 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/clojureRefs/README
+++ b/clojureRefs/README
@@ -36,9 +36,7 @@ encapsulated into a [[transaction]]. In [[Language:Clojure|Clojure]] the
 function ''dosync'' starts such a transaction allowing to alter [[Refs]] by 
 an update function. 
 
-<code>
-
-
+ <nowiki>
 (defn cutCompany [c]
     (dosync
         ;; alter ref function
@@ -46,7 +44,7 @@ an update function.
     ;; returning changed ref
     c)
 
-</code>
+</nowiki>
 
 == Architecture ==
 
