improved the README of the project jocamlJoinPatterns
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1641 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/jocamlJoinPatterns/README
+++ b/jocamlJoinPatterns/README
@@ -57,11 +57,11 @@ salary.
 
 == Usage ==
 
-You need to install JoCaml. 
+You need to install J[[Language:JoCaml|JoCaml]] . 
 
-Use the makefile for some demo:
+Use the [[Technology:GNU make|makefile]] for some demo:
 * Enter ''make compile'' to compile the code
-* Enter ''make test'' to execute the script contained in ''main.ml'' and to perform a simple diff-based test
+* Enter ''make test'' to execute the script contained in ''main.ml'' and to perform a simple [[Technology:diff|diff-based]] test
 
 == Contributors ==
 
