some little unification in the code in project groovyDataFlowVariables
git-svn-id: https://developers.svn.sourceforge.net/svnroot/developers/repository/101companies@1648 80f8bc9e-4d75-439a-9954-e8dd026db917

--- a/groovyDataFlowVariables/README
+++ b/groovyDataFlowVariables/README
@@ -47,8 +47,7 @@ An example for such a [[bean]] is ''totals''.
 
  <nowiki>
 // outsourcing total computation for each the department
-for (i in 0..<depts.size) {
-    Department d = depts.get i
+depts.each() { d ->
     task {
     // adding dept's total as dataflow variable to the bean
         totals.putAt d.name, d.total()
